# PydanticAIDemo

./: main.py  pyproject.toml  rag_agent.py  rag_demo.py  upsert_documents.py  variables.py
documents/: test.md
