[project]
name = "pydanticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.13.0",
    "langchain>=1.2.18",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "pydantic-ai>=1.93.0",
    "pymilvus[milvus-lite]>=3.0.0",
    "setuptools<81",
    "tavily-python>=0.7.24",
]
